# opengl-glsl-renderer

./: .GITIGNORE  .gitignore  CMakeLists.txt  README.md  algebra.cpp  animations.cpp  camera.cpp  camera.h  features.h  graphics_app  main.cpp  run.sh  shaders.cpp  shaders.h
include/: algebra.h  animations.h  constants.h  inputManager.h  lights.h  locCache.h  material.h  mesh.h  sceneLoader.h  sceneObj.h  shaders.h
shaders/: 0-temp_frag.glsl  1-basic_vertex.glsl  1-test_frag.glsl  2-basic_frag.glsl  2-interlaced_frag.glsl  2-interlaced_vertex.glsl  3-interlaced_vertex.glsl  3-phong_frag.glsl  3-phong_vertex.glsl  4-cartoon_frag.glsl  4-cartoon_vertex.glsl  4-phong_frag.glsl  4-phong_vertex.glsl  5-cartoon_frag.glsl  6-flat_frag.glsl  7-wireframe_frag.glsl  base_vertex.glsl  flat_frag.glsl  flat_geom.glsl  flat_vertex.glsl  temp_frag.glsl  temp_vertex.glsl  test_frag.glsl  test_vertex.glsl  wireframe_geom.glsl  wireframe_vertex.glsl
shaders/basic/: 2-basic_vertex.glsl  3-interlaced_vertex.glsl
shaders/perlin/: perlin_frag.glsl  perlin_geom.glsl  perlin_vertex.glsl
shaders/phong/: 4-phong_frag.glsl  5-cartoon_frag.glsl  5-cartoon_vertex.glsl  6-flat_frag.glsl  6-flat_geom.glsl  6-flat_vertex.glsl
shaders/test/: 0-temp_frag.glsl  0-temp_vertex.glsl  1-test_frag.glsl  1-test_vertex.glsl  cubemap_frag.glsl
shaders/wireframe/: 7-wireframe_vertex.glsl
src/: animations.cpp  lights.cpp  locCache.cpp  main.cpp  material.cpp  mesh.cpp  obj.c  sceneLoader.cpp  sceneObj.cpp  shaders.cpp
